# quantum-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  quantum_shor.rs  rules.md  skill.md  workflow.md
benches/: shor_benchmark.rs
scripts/: benchmark.sh  run.sh  setup.sh  test.sh
src/: cli.rs  lib.rs  main.rs  shor.rs
src/audit/: mod.rs  report.rs  security.rs
src/blockchain/: block.rs  chain.rs  miner.rs  mod.rs  transaction.rs
src/quantum/: gates.rs  measure.rs  mod.rs  state.rs
