[package]
name = "quantum-shor"
version = "0.1.0"
edition = "2021"
authors = ["Quantum Team"]
description = "Quantum Shor Algorithm for Blockchain Security Audit"

[dependencies]
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "shor_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1