[package]
name = "quantum-shor"
version = "0.2.0"
edition = "2021"
authors = ["Quantum Team <quantum@example.com>"]
description = "Quantum Shor Algorithm for Blockchain Security Audit - A Rust implementation for testing blockchain vulnerability to quantum attacks"
license = "MIT"
repository = "https://github.com/quantum-team/quantum-shor"
documentation = "https://docs.rs/quantum-shor"
readme = "README.md"
keywords = ["quantum", "shor", "blockchain", "cryptography", "security"]
categories = ["cryptography", "algorithms", "simulation"]

[dependencies]
rand = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "shor_benchmark"
harness = false

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]